conf/iptables
# Generated by iptables-save v1.4.21 on Sat Apr 23 13:30:40 2016
*nat
:PREROUTING ACCEPT [372:20396]
:INPUT ACCEPT [171:10190]
:OUTPUT ACCEPT [226:14160]
:POSTROUTING ACCEPT [305:18310]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.93.0/24 ! -o docker0 -j MASQUERADE

-A POSTROUTING -s 172.17.93.3/32 -d 172.17.85.3/32 -p udp -m udp --dport 27015 -j MASQUERADE
-A DOCKER ! -i docker0 -p udp -m udp --dport 27015 -j DNAT --to-destination 172.17.85.2:27015

-A POSTROUTING -s 172.17.93.3/32 -d 172.17.93.3/32 -p udp -m udp --dport 27016 -j MASQUERADE
-A DOCKER ! -i docker0 -p udp -m udp --dport 27016 -j DNAT --to-destination 172.17.93.3:27015

COMMIT

# Completed on Sat Apr 23 13:30:40 2016
# Generated by iptables-save v1.4.21 on Sat Apr 23 13:30:40 2016
*filter
:INPUT ACCEPT [40223:18963602]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [38961:20586199]
:DOCKER - [0:0]
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER -d 172.17.93.2/32 ! -i docker0 -o docker0 -p udp -m udp --dport 27015 -j ACCEPT

-A DOCKER -d 172.17.93.3/32 ! -i docker0 -o docker0 -p udp -m udp --dport 27016 -j ACCEPT
COMMIT
# Completed on Sat Apr 23 13:30:40 2016
